--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Better Toolnavy",
   "version": "0.1",
   "description": "This extension makes Toolnavy much better.",
+  "background_page": "background.html",
   "page_action": {
     "default_icon": "images/icon19.png"
   },
@@ -10,11 +11,7 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png" 
   },
-  "content_scripts": 
-  [
-  	{
-  		"matches": ["http://*.toolnavy.com/*"],
-  		"js": ["scripts/jquery-1.7.1.min.js", "scripts/contentscript.js"]
-  	}
+  "permissions" : [
+    "tabs"
   ]
 }
