Improved triangle hiding code to fix a bug where the triangle would be visible briefly before hiding.
Commented out js method for reference.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,5 +12,9 @@
       "js": [ "/scripts/jquery-1.7.1.min.js" , "/scripts/contentscript.js" ],
       "matches": [ "http://*.toolnavy.com/*" ],
       "run_at": "document_end"
+   }, {
+      "css": [ "/scripts/contentstyle.css" ],
+      "matches": [ "http://*.toolnavy.com/*" ],
+      "run_at": "document_start"
    } ]
 }
